# prcop

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  tox.ini
features/: check.feature  environment.py
features/steps/: check.py
src/prcop/: __init__.py  alerts.py  business_hours.py  check.py  checker.py  cli.py  config.py  exceptions.py  http_client.py  reporters.py
tests/: test_HttpClient.py  test_ReviewOverdueAlert.py  test_SlackReporter.py  test_business_hours.py  test_check.py  test_checker.py  test_cli.py  test_prcop.py
