[tool.poetry]
name = "prcop"
version = "0.1.0"
description = ""
authors = ["RobbieClarken <robbie.clarken@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
behave = "^1.2"
requests_mock = "^1.5"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "prcop"
lines_after_imports = 2
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
