[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "prcop"
version = "0.1.0"
description = ""
authors = ["RobbieClarken <robbie.clarken@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
behave = "^1.2"
requests_mock = "^1.5"
freezegun = "^0.3.11"
coverage = "^4.5"
pytest_mock = "^1.10"

[tool.poetry.scripts]
prcop = "prcop.cli:cli"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "prcop"
line_length = 99
lines_after_imports = 2
multi_line_output = 3

[tool.black]
line-length = 99
