[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "prcop"
version = "0.2.1"
description = "Send Slack alerts to remind your team when reviews are overdue on pull requests"
authors = ["RobbieClarken <robbie.clarken@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/RobbieClarken/prcop"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
behave = "^1.2"
requests_mock = "^1.5"
freezegun = "^0.3.11"
coverage = "^4.5"
pytest_mock = "^1.10"

[tool.poetry.scripts]
prcop = "prcop.cli:cli"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "prcop"
line_length = 99
lines_after_imports = 2
multi_line_output = 3

[tool.black]
line-length = 99
